examples/good/56-return-in-block.wlk
# (return in block)

def f() -> Void:
    if True:
        return

def main() -> Void:
    f()
    print("All good!")