examples/bad/18-invalid-print.wlk
# (invalid print)

def f() -> Void:
    return

def main() -> Void:
    print(f())